# Crawl-Data

./: .env  CRAWLING_SYSTEM.txt  docker-compose.yml  package-lock.json
backend/: Dockerfile  crawl.py  pyproject.toml  requirements.txt
backend/app/: celery_app.py  database.py  main.py  tasks.py
backend/app/models/: news.py
backend/app/routers/: analytics.py  news.py
scraper/: Dockerfile  README.md  celery_app.py  main.py  requirements.txt  scrapy.cfg  tasks.py  wait-for-rabbitmq.sh  worker_state.db
scraper/scraper/: middlewares.py  pipelines.py  settings.py
scraper/scraper/spiders/: __init__.py  news_spider.py
